<resources>
    <string name="app_name">OnlineShopping</string>
    <string name="sign_in">ورود به حساب کاربری</string>
    <string name="sign_up">ایجاد حساب کاربری</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمزعبور</string>
    <string name="email">ایمیل</string>
    <string name="toman">تومان</string>
    <string name="product_img">تصویر محصول</string>
    <string name="add_to_cart">اضافه کردن به سبد خرید</string>
    <string name="count">تعداد:</string>
    <string name="empty_basket">سبد خرید شما خالی است!</string>
    <string name="checkout">نهایی کردن سفارش</string>
    <string name="new_address">ادرس جدید</string>
    <string name="add_address">افزودن ادرس</string>
    <string name="remove_address">remove_address</string>
    <string name="final_chaekout">ثبت سفارش</string>
    <string name="total_price">قیمت کل:</string>
    <string name="select_address">آدرس مقصد را انتخاب کنید:</string>
    <string name="address">محل تحویل:</string>
    <string name="no_histoy">تا حالا سفارشی ثبت نشده است!</string>
    <string name="order_id">شناسه سفارش:</string>
    <string name="order_date">تاریخ سفارش:</string>
    <string name="order_price">مبلغ سفارش:</string>
    <string name="count1">تعداد</string>
</resources>
