<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    tools:context=".CheckoutActivity">

    <LinearLayout
        android:id="@+id/price"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/count"
        app:layout_constraintDimensionRatio="8:1"
        android:background="#ECEFF1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:fontFamily="@font/sahel"
            android:text="@string/toman"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:fontFamily="@font/yekan"
            android:textSize="20sp"
            android:textColor="#4CAF50"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/sahel"
            android:text="@string/total_price"
            android:paddingRight="10dp"
            android:textColor="#E91E63"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/count"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintDimensionRatio="8:1"
        android:background="#ECEFF1"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/product_count"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:paddingLeft="20dp"
            android:fontFamily="@font/yekan"
            android:textSize="20sp"
            android:textColor="#4CAF50"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/sahel"
            android:text="@string/count"
            android:paddingRight="10dp"
            android:textColor="#E91E63"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count"
        app:layout_constraintBottom_toTopOf="@+id/checkout"
        android:background="#ECEFF1"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/product_address"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:fontFamily="@font/yekan"
            android:textSize="16sp"
            android:textColor="#607D8B"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/sahel"
            android:paddingRight="10dp"
            android:text="@string/address"
            android:textColor="#E91E63"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/checkout"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintDimensionRatio="4:1"
        android:text="@string/final_chaekout"
        android:fontFamily="@font/yekan"
        android:textSize="20sp"
        android:textColor="#ECEFF1"
        android:drawableEnd="@drawable/ic_offline_pin_black_24dp"
        android:background="#2196F3"
        android:paddingRight="20dp"
        android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>