<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressActivity">

    <TextView
        android:id="@+id/select_address"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:text="@string/select_address"
        android:fontFamily="@font/sahel"
        android:textColor="#607D8B"
        android:background="#ECEFF1"
        app:layout_constraintBottom_toTopOf="@id/address_list"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/address_list"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_address"
        app:layout_constraintBottom_toTopOf="@+id/new_address"
        android:layout_height="0dp">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_address"
        android:layout_width="0dp"
        app:layout_constraintLeft_toRightOf="@+id/add_new_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/new_address"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_address_et"
            android:layout_width="match_parent"
            android:maxLines="10"
            android:fontFamily="@font/sahel"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_new_address"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/new_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_list"
        android:layout_margin="10dp"
        android:background="#2196F3"
        android:textColor="#ECEFF1"
        android:textSize="16sp"
        android:padding="5dp"
        android:fontFamily="@font/yekan"
        android:text="@string/add_address"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>