<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <ImageView
            android:id="@+id/product_img"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintDimensionRatio="4:2"
            android:layout_height="0dp"
            android:contentDescription="@string/product_img" />
        <TextView
            android:id="@+id/product_title"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_img"
            app:layout_constraintDimensionRatio="8:1"
            android:padding="10dp"
            android:fontFamily="@font/sahel"
            android:textStyle="bold"
            android:layout_height="0dp" />
        <LinearLayout
            android:id="@+id/price"
            android:orientation="horizontal"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_title"
            app:layout_constraintDimensionRatio="8:1"
            android:padding="10dp"
            android:layout_height="0dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/toman"
                    android:paddingRight="10dp"
                    android:fontFamily="@font/yekan"
                    android:textSize="20sp"
                    android:textColor="#4CAF50"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:fontFamily="@font/yekan"
                    android:textSize="20sp"
                    android:textColor="#4CAF50"
                    android:layout_height="match_parent" />

        </LinearLayout>
        <ScrollView
            android:id="@+id/desc"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintDimensionRatio="3:1"
            android:layout_height="0dp" >
                <TextView
                    android:id="@+id/product_desc"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/sahel"
                    android:padding="10dp"
                    android:layout_height="wrap_content" />
        </ScrollView>


        <Button
            android:id="@+id/add_to_cart_btn"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            app:layout_constraintDimensionRatio="4:1"
            android:text="@string/add_to_cart"
            android:fontFamily="@font/yekan"
            android:textSize="18sp"
            android:textColor="#eeeeee"
            android:drawableEnd="@drawable/ic_shopping_basket_black_24dp"
            android:background="#4CAF50"
            android:paddingRight="20dp"
            android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>