<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#bb000000">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            >
        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="0dp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="10dp"
                android:background="#99263238"
                android:textColorHint="#99B0BEC5"
                android:maxLines="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username"
                android:layout_width="0dp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="10dp"
                android:background="#99263238"
                android:textColorHint="#99B0BEC5"
                android:maxLines="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="0dp"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="10dp"
                android:background="#99263238"
                android:textColorHint="#99B0BEC5"
                app:passwordToggleEnabled="true"
                android:maxLines="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:textColor="#ffffff"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:alpha="0.7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintRight_toRightOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:alpha="0.7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>