<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#ECEFF1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:textColor="#263238"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#263238"
                    android:text="@string/order_id"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:textColor="#263238"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#263238"
                    android:text="@string/order_date"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/order_price"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:textColor="#263238"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:fontFamily="@font/sahel"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#263238"
                    android:text="@string/order_price"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
