<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="10dp"
    android:layout_height="128dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/right_part"
        android:layout_width="128dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/left_part"
        android:layout_marginStart="10dp"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rating"
            app:layout_constraintDimensionRatio="4:3"
            android:layout_height="0dp"
            android:contentDescription="@string/product_img" />

        <LinearLayout
            android:id="@+id/rating"
            android:orientation="horizontal"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_img"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_height="0dp" >
            <LinearLayout
                android:id="@+id/rate"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/remove"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_remove_black_24dp"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_black_24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rate_count"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/count"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:fontFamily="@font/yekan"
                    android:textColor="#03A9F4"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:paddingRight="3dp"
                    android:gravity="center"
                    android:fontFamily="@font/yekan"
                    android:text="@string/count1"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/left_part"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/right_part"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/product_desc"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:fontFamily="@font/sahel"
            android:textColor="#37474F"
            android:layout_height="0dp">

        </TextView>

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_title"
            app:layout_constraintBottom_toTopOf="@id/product_line"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="12sp"
            android:fontFamily="@font/sahel"
            android:justificationMode="inter_word"
            android:layout_height="64dp">

        </TextView>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/product_line"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_desc"
            app:layout_constraintBottom_toTopOf="@id/price"
            android:background="#eeeeee"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="1dp">

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/price"
            android:orientation="horizontal"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingLeft="5dp"
                android:text="@string/toman"
                android:fontFamily="@font/yekan"
                android:textColor="#4CAF50"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/product_price"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="#4CAF50"
                android:fontFamily="@font/yekan"
                android:layout_height="match_parent" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>